# app/Http/Controllers/BidController.php
@@ -3,28 +3,85 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\BidRequest;
-use App\Http\Resources\UserResource;
+use App\Http\Resources\BidResource;
+use App\Models\Bid;
 
 class BidController extends Controller
 {
-    /**
-     * Display a listing of the resource.
+    
+
+     /**
+     * @OA\Get(
+     * path="/api/v1/bids",
+     * operationId="Bids",
+     * tags={"Bids"},
+     * summary="Get All Bids",
+     * description="Get All Bids",
+     * security={{ "apiAuth": {} }},
+     *     
+     *      @OA\Response(
+     *          response=201,
+     *          description="Bids Return Successfully",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Bids Return Successfully",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Unprocessable Entity",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     * )
      */
     public function index()
     {
-        //
+        return BidResource::collection(Bid::paginate(10));
     }
 
-    /**
-     * Show the form for creating a new resource.
-     */
-    public function create()
-    {
-        //
-    }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     * path="/api/v1/bids",
+     * operationId="Add New Bid",
+     * tags={"Bids"},
+     * summary="Add New Bid",
+     * description="Add New Bid",
+     * security={{ "apiAuth": {} }},
+     *     @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"product_id", "new_price"},
+     *               @OA\Property(property="product_id", type="integer", example="1"),
+     *               @OA\Property(property="new_price", type="integer", example="500"),
+     *            ),
+     *        ),
+     *    ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Bid Created Successfully",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Bid Created Successfully",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Unprocessable Entity",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     * )
      */
     public function store(BidRequest $request)
     {
@@ -39,13 +96,6 @@ class BidController extends Controller
         //
     }
 
-    /**
-     * Show the form for editing the specified resource.
-     */
-    public function edit(string $id)
-    {
-        //
-    }
 
     /**
      * Update the specified resource in storage.
