# app/Http/Resources/BidResource.php
@@ -4,6 +4,8 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
+use App\Models\Product;
+use App\Models\User;
 
 class BidResource extends JsonResource
 {
@@ -14,6 +16,17 @@ class BidResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        $product = Product::findOrFail($this->product_id);
+        $user = User::findOrFail($this->user_id);
+
+        return [
+            'id' => $this->id,
+            'type' => 'bids',
+            'attributes' => [
+                'new_price' => $this->new_price,
+                'user' => $user,
+                'product' => $product,
+            ]
+        ];
     }
 }
